WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99564
[WK2][GTK] Unneeded GError field in internal structure in WebKitFaviconDatabase.cpp
https://bugs.webkit.org/show_bug.cgi?id=99564
Summary
[WK2][GTK] Unneeded GError field in internal structure in WebKitFaviconDataba...
Mario Sanchez Prada
Reported
2012-10-17 01:28:02 PDT
The field 'error' in GetFaviconSurfaceAsyncData is not needed and we should remove it and update the code accordingly
Attachments
Patch proposal
(3.71 KB, patch)
2012-10-17 01:33 PDT
,
Mario Sanchez Prada
cgarcia
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mario Sanchez Prada
Comment 1
2012-10-17 01:33:33 PDT
Created
attachment 169121
[details]
Patch proposal The patch
WebKit Review Bot
Comment 2
2012-10-17 01:35:38 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Mario Sanchez Prada
Comment 3
2012-10-17 02:27:49 PDT
Committed
r131569
: <
http://trac.webkit.org/changeset/131569
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug