[WK2][GTK] Unneeded GError field in internal structure in WebKitFaviconDatabase.cpp https://bugs.webkit.org/show_bug.cgi?id=99564

Reviewed by Carlos Garcia Campos.

Removed field 'error' from GetFaviconSurfaceAsyncData and updated
the code accordingly, by using g_simple_async_result_take_error().

* UIProcess/API/gtk/WebKitFaviconDatabase.cpp:
(GetFaviconSurfaceAsyncData): Removed unneeded field.
(processPendingIconsForPageURL): Avoid using g_propagate_error and
use g_simple_async_result_take_error directly instead.
(webkit_favicon_database_get_favicon_finish): Remove unneeded code.

Canonical link: https://commits.webkit.org/117525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131569 268f45cc-cd09-0410-ab3c-d52691b4dbfc